--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -7,6 +7,18 @@ body, html {
     padding: 0;
 }
 
+body {
+    background-image: url('../images/tableBois.jpg');
+    background-repeat: repeat;
+}
+
+.container-fluid {
+    width: 94vw;
+    margin-top : 5%;
+    padding : 2%;
+    background: #FFF;
+}
+
 .jumbotron {
     margin-top: 10px;
     height: 40vh;
@@ -14,27 +26,74 @@ body, html {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    border-radius: 3px 3px 0 0;
+    display: flex;
+    align-items: center;
     .containImg {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(255, 255, 255, 0.66);
-        color: #494c4d;
+        // display: flex;
+        // align-items: center;
+        width: 98%;
+        height: 98%;
+        //background: rgba(255, 255, 255, 1);
+        h1 {
+            // width: 75%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            font-family: 'Merienda', cursive;
+            font-size: 6vw;
+            background: rgba(255, 255, 255, 0.90);
+            color: black;
+            mix-blend-mode: screen;
+            // background-image: url('../images/boisFoncéTexture.jpg');
+            // background-size: cover;
+            // background-clip: text;
+            // -webkit-background-clip: text;
+            // -webkit-text-fill-color: transparent;
+            padding-left: 5%;
+        }
+    }
+    .img {
+        width: 45%;
+        height : 180%;
+        position: relative;
+        top: -45%;
+        align-self: stretch;
+        //max-width: 200px;
+        //min-width: 100px;
+        background-image: url('../images/orange_icon.svg');
+        background-size: cover;
+        // background-position-x: top;
+        background-position-y: 35%;
     }
 }
 
-nav {
-    ul {
+.nav {
+    margin-top: 0;
+    width: 100%;
+    height: 5vh;
+    background-color: #FFF;
+    z-index:10;
+    li{
+        width: 20%;
+        padding : 20px auto;
         a {
-            //display: inline-block;
+            color: #494c4d;
+            text-align: center;
         }
     }
 }
 
 .mainHome {
-    #concert {
-        background-image: url('../images/concert.jpg');
+    margin-top: 20px;
+    .containEvent {
+        #concert {
+            width : 50%;
+            height: 100%;
+            background-image: url('../images/concert2.jpg');
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+        }
     }
 }
