--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -30,13 +30,9 @@ body {
     display: flex;
     align-items: center;
     .containImg {
-        // display: flex;
-        // align-items: center;
         width: 98%;
         height: 98%;
-        //background: rgba(255, 255, 255, 1);
         h1 {
-            // width: 75%;
             height: 100%;
             display: flex;
             align-items: center;
@@ -45,11 +41,6 @@ body {
             background: rgba(255, 255, 255, 0.90);
             color: black;
             mix-blend-mode: screen;
-            // background-image: url('../images/boisFoncéTexture.jpg');
-            // background-size: cover;
-            // background-clip: text;
-            // -webkit-background-clip: text;
-            // -webkit-text-fill-color: transparent;
             padding-left: 5%;
         }
     }
@@ -59,11 +50,8 @@ body {
         position: relative;
         top: -45%;
         align-self: stretch;
-        //max-width: 200px;
-        //min-width: 100px;
         background-image: url('../images/orange_icon.svg');
         background-size: cover;
-        // background-position-x: top;
         background-position-y: 35%;
     }
 }
@@ -88,8 +76,8 @@ body {
     margin-top: 20px;
     .containEvent {
         #concert {
-            width : 50%;
-            height: 100%;
+            width : 50px;
+            height: 100px;
             background-image: url('../images/concert2.jpg');
             background-repeat: no-repeat;
             background-position: center;
