--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,7 @@
+$orange: #f55628;
+$darkGrey: #494c4d;
+$lightGrey: #898885;
+
 * {
     box-sizing: border-box;
 }
@@ -36,8 +40,8 @@ body {
             height: 100%;
             display: flex;
             align-items: center;
-            font-family: 'Merienda', cursive;
-            font-size: 6vw;
+            font-family: 'Devonshire', cursive;
+            font-size: 8.5vw;
             background: rgba(255, 255, 255, 0.90);
             color: black;
             mix-blend-mode: screen;
@@ -66,22 +70,83 @@ body {
         width: 20%;
         padding : 20px auto;
         a {
-            color: #494c4d;
+            color: $darkGrey;
             text-align: center;
+            &:hover {
+                background-color: $orange;
+                transform : scale(1.2);
+                transition : 0.5s;
+            }
+            
+        }
+    }
+}
+.petitMotPerso {
+    font-family: 'Devonshire', cursive;
+    font-size: 4vw;
+    text-align: center;
+    color: $orange;
+    text-shadow: 2px 2px $lightGrey;
+    margin-top: 15px;
+}
+.mainHome {
+    margin-bottom: 20px;
+    .panel {
+        margin-top: 10px;
+        img {
+            width: 100%;
+        }
+        .panel-footer {
+            margin-top: 20px;
         }
     }
 }
 
-.mainHome {
-    margin-top: 20px;
-    .containEvent {
-        #concert {
-            width : 50px;
-            height: 100px;
-            background-image: url('../images/concert2.jpg');
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: cover;
-        }
+.resto {
+    .panel-header {
+        width: 100%;
+        height: 500px;
+    }
+    #imgRestoBxl {
+        background-image: url('../images/PasrestoBruxelles.jpg');
+        background-size: cover;
+    }
+    #imgRestoParis {
+        background-image: url('../images/restoParis.jpg');
+        background-size: cover;
+    }
+    #imgRestoTokyo {
+        background-image: url('../images/restoTokyo.jpg');
+        background-size: cover;
+    }
+    .panel-body {
+        height: 350px;
+        padding-top: 15px;
+    }
+    .panel-footer {
+        width: 100%;
+        height: 300px;
+    }
+    #mapBruxelles {
+        background-image: url('../images/mapBruxelles.png');
+        background-size: cover;
+        background-position: center;
+    }
+    #mapParis {
+        background-image: url('../images/mapParis.png');
+        background-size: cover;
+        background-position: center;
+    }
+    #mapTokyo {
+        background-image: url('../images/mapTokyo.png');
+        background-size: cover;
+        background-position: center;
+    }
+}
+
+form {
+    padding: 10px;
+    label {
+        padding : 5px;
     }
 }
