--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ body {
   color: #494c4d;
   text-align: center;
   font-family: "Crimson Text", serif;
-  font-size: 120%;
+  font-size: 1.8vw;
 }
 .nav li a:hover {
   background-color: #f55628;
@@ -203,14 +203,18 @@ form button:active {
 }
 
 /*--------------------Gallerie----------------------*/
+#mainGallerie {
+  padding: 0 !important;
+}
+
 .photoContainer {
-  width: 94vw;
+  width: 100%;
   height: 800px;
+  margin: auto !important;
 }
 .photoContainer .moyenneRow {
   height: 25%;
   width: 100%;
-  padding-left: 15px;
 }
 .photoContainer .petiteRow {
   height: 20%;
@@ -286,7 +290,8 @@ form button:active {
   background-image: url("../images/photo11.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
+  background-position-x: center;
+  background-position-y: 65%;
 }
 .photoContainer #photo12 {
   background-image: url("../images/photo12.jpg");
@@ -323,6 +328,30 @@ form button:active {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+
+@media screen and (min-width: 992px) {
+  .photoContainer {
+    width: 94vw;
+  }
+
+  .moyenneRow {
+    height: 250px;
+    width: 100%;
+    padding-left: 15px;
+  }
+
+  .petiteRow {
+    height: 250px;
+    width: 100%;
+    padding-left: 15px;
+  }
+
+  .grandeRow {
+    height: 250px;
+    width: 100%;
+    padding-left: 15px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
