--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,10 @@ body {
   background-color: #9fa09b;
 }
 
+.row {
+  margin: 0;
+}
+
 .container-fluid {
   width: 94vw;
   margin-top: 5%;
@@ -86,7 +90,7 @@ body {
   text-align: center;
   color: #f55628;
   text-shadow: 2px 2px #9fa09b;
-  margin-top: 15px;
+  padding: 4%;
 }
 
 /*-------------------page principale----------------------*/
@@ -203,14 +207,15 @@ form button:active {
 }
 
 /*--------------------Gallerie----------------------*/
-#mainGallerie {
-  padding: 0 !important;
-}
-
 .photoContainer {
   width: 100%;
   height: 800px;
   margin: auto !important;
+}
+@media screen and (max-width: 767px) {
+  .photoContainer {
+    height: 4000px;
+  }
 }
 .photoContainer .moyenneRow {
   height: 25%;
@@ -219,12 +224,10 @@ form button:active {
 .photoContainer .petiteRow {
   height: 20%;
   width: 100%;
-  padding-left: 15px;
 }
 .photoContainer .grandeRow {
   height: 30%;
   width: 100%;
-  padding-left: 15px;
 }
 .photoContainer #photo1 {
   background-image: url("../images/photo1.jpg");
@@ -328,30 +331,6 @@ form button:active {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-}
-
-@media screen and (min-width: 992px) {
-  .photoContainer {
-    width: 94vw;
-  }
-
-  .moyenneRow {
-    height: 250px;
-    width: 100%;
-    padding-left: 15px;
-  }
-
-  .petiteRow {
-    height: 250px;
-    width: 100%;
-    padding-left: 15px;
-  }
-
-  .grandeRow {
-    height: 250px;
-    width: 100%;
-    padding-left: 15px;
-  }
 }
 
 /*# sourceMappingURL=style.css.map */
