--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -20,7 +20,7 @@ body, html {
 
 body {
     background-color: $lightGrey;
-    background-image: url('../images/tableBois.jpg');
+    background-image: url('../images/tableBois.webp');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -41,7 +41,7 @@ body {
     @media screen and (max-width: 580px) {
         height : 200px;
     }
-    background-image: url("../images/Jumbo.jpg");
+    background-image: url("../images/Jumbo.webp");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -109,7 +109,7 @@ nav {
         font-size: 16px;
     }
     text-align: center;
-    color: $orange;
+    color: $darkGrey;
     text-shadow: 2px 2px $lightGrey;
     padding: 4%;
 }
